fixed the divs to be fully visible

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -66,19 +66,13 @@
         background-color: #fff !important;
         box-shadow: 0 0 0 !important;
     }
-
-    .edu-title {
-        margin-top: -70px !important;
-    }
 }
 
 @media (min-width: 768px) and (max-width: 1200px) {
     .skill-card {
         margin-top: 25px;
     }
-    .edu-title {
-        margin-top: -70px !important;
-    }
+
     .contactForm {
         max-width: 80%;
     }
@@ -95,9 +89,6 @@
 }
 
 @media (min-width: 1200px) and (max-width: 1400px) {
-    .edu-title {
-        margin-top: -70px;
-    }
     .contactForm {
         max-width: 60%;
     }
@@ -115,10 +106,6 @@
 @media (min-width: 1400px) {
     .contactForm {
         max-width: 50%;
-    }
-
-    .edu-title {
-        margin-top: -70px !important;
     }
     .footer-links {
         display: flex;
@@ -184,7 +171,7 @@
     color: black !important;
     background-color: grey;
     border-radius: 30px;
-    transform: scale(1.10);
+    transform: scale(1.01);
 }
 
 .footer {
